@@ -2,6 +2,8 @@ Revision history for Perl extension AnyEvent.
 
 	- provide $AE::VERSION.
         - removed traces of "no strict 'refs'".
+        - implement punycode_encode/decode, idn_nameprep
+          and idn_to_ascii operations in AnyEvent::Util.
 
 5.22  Sat Dec  5 03:51:13 CET 2009
 	- downgrade-or-fail in AnyEvent::Handle::push_write, to
